--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^13.2.0",
+    "@vueuse/sound": "^2.1.3",
     "axios": "^1.9.0",
     "eventemitter3": "^5.0.1",
+    "moment": "^2.30.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
