--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_HOST="http://127.0.0.1:8787"
+VITE_API_HOST="https://w4lwz7j7-8787.use.devtunnels.ms"
 VITE_DISCORD_AUTH="https://discord.com/oauth2/authorize?client_id=1369814348482216128&response_type=code&redirect_uri=https%3A%2F%2Fplanet-bluto.net%2Fhahaha%2F&scope=identify"
