--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.9.0",
     "eventemitter3": "^5.0.1",
     "moment": "^2.30.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-mobile-detection": "^2.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
