--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    
+    "allowJs": true,
+    "noImplicitAny": false,
+    "esModuleInterop": true,
     /* Linting */
     // "strict": true,
     // "noUnusedLocals": true,
